tests/ui/restrictions/mut-restriction-construction.stderr
error: `Foo` cannot be constructed using a struct expression outside `foo`
  --> $DIR/mut-restriction-construction.rs:14:15
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     let foo = foo::Foo { alpha: 0 };
   |               ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: a struct containing fields with a mutability restriction cannot be constructed using a struct expression

error: `Beta` cannot be constructed using a variant expression outside `foo`
  --> $DIR/mut-restriction-construction.rs:15:15
   |
LL |         Beta(mut(self) u8),
   |              --------- mutability restricted here
...
LL |     let bar = foo::Bar::Beta(0);
   |               ^^^^^^^^^^^^^^^^^
   |
   = note: a variant containing fields with a mutability restriction cannot be constructed using a variant expression

error: aborting due to 2 previous errors

